# QAPI-IDE

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SCRIPTING.md  TRANSLATING.md
CMake/Libs/: include_enum_lib.cmake  include_fmt_lib.cmake
CMake/Modules/: CreateTarget.cmake
JsonViewer/: CMakeLists.txt
Libs/: CMakeLists.txt
Libs/enum/: enum.hpp
Logger/: CMakeLists.txt  Logger.cpp  log.cpp  named_thread.cpp
Logger/logger/: log.hpp  named_thread.hpp  version.hpp.in
Logger/logger/support/: map.hpp
MarkupFormatLib/: CMakeLists.txt  stub.cpp
RequestLib/: CMakeLists.txt  curl.cpp  methods.cpp  request.cpp  response.cpp
RequestLib/logger_support/: request.hpp  response.hpp  url.hpp
RequestLib/requestlib/: curl.hpp  exceptions.hpp  log.hpp  methods.hpp  request.hpp  response.hpp
RequestLib/requestlib/logger_support/: request.hpp  response.hpp
ScriptingInterface/: CMakeLists.txt  script.cpp  scriptprivate.cpp
ScriptingInterface/backends/cling/: cling.cpp  cling.hpp
ScriptingInterface/backends/javascript/: js.cpp  js.hpp
ScriptingInterface/script/: exceptions.hpp  script.hpp  value.hpp
ScriptingInterface/script/private/: scriptprivate.hpp
Tests/: CMakeLists.txt  benchmark.hpp  logger-test.hpp  main.cpp  requestlib-tests.hpp
Tests/logger/: file-test.hpp  fmt-test.hpp  toggle-test.hpp
Tests/request-lib/: basic-request.hpp  headers.hpp  redirect.hpp  server.cpp  server.hpp  test.cert  test.key  url.hpp
Tests/script/: cpp.hpp  js.hpp
Tests/workspace-fmt/: deserialize-test.hpp  serialize-test.hpp
UserInterface/: CMakeLists.txt  main.cpp
UserInterface/i18n/: ja_JP.ts  translations.qrc
UserInterface/ui/: constants.hpp  log.hpp
UserInterface/ui/logger_support/: qstring.hpp
UserInterface/utils/: menu_creator.cpp  menu_creator.hpp
UserInterface/widgets/: StatusBar.cpp  StatusBar.hpp
UserInterface/windows/: MainWindow.cpp  MainWindow.hpp
Utils/: CMakeLists.txt
Utils/utils/: list.hpp  string.hpp  utils.hpp
WorkspaceFormat/: CMakeLists.txt  workspace.cpp
WorkspaceFormat/workspace/: workspace.hpp
tools/: create-translation  update-translations
